--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="skill-row">
           <img id="coding-gif" src="https://media.giphy.com/media/KdxXHFKFgPkdMahzTI/giphy.gif" alt="coding-img">
           <h3 class="details skill_head">Design & Development</h3>
-          <p class="skill_head">I learned to code when I was 15 and it has been a wonderful journey since then. My expertise is in Python(3), HTML5, CSS3 & Javascript. </p>
+          <p class="skill_head">I learned to code when I was 15 and it has been a wonderful journey since then. My expertise is in Python(3), Django REST-APIs, HTML5, CSS3 & Javascript. </p>
         </div>
         <div class="skill-row">
           <img id="cooking" src="https://media.giphy.com/media/lSaSPOLjtjTDkVvLi6/giphy.gif" alt="cooking-img">
